# mksh

./: Build.sh  BuildGNU.sh  CONTRIBUTORS  ChangeLog.0  FAQ2HTML.sh  LEGAL  Makefile  NOTES  PROJECTS  README  README.md  _.c  aalloc.c  aclocal.m4  alloc.c  askQuestions.txt  c_ksh.c  c_sh.c  c_test.c  c_test.h  c_ulimit.c  check.pl  check.t  chvt.c  compat.c  compat.h  conf-end.h  config.h  configure  configure.in  copyright  dot.mkshrc  edit.c  edit.h  emacs-gen.sh  emacs.c  emacsfn.h  eval.c  exec.c  expand.h  (+68 more)
etc/: ksh.kshrc  profile  sys_config.sh
tests/: README  alias.t  arith.t  bksl-nl.t  brkcont.t  eglob.t  glob.t  heredoc.t  history.t  ifs.t  integer.t  lineno.t  read.t  regress.t  syntax.t  th  th.sh  unclass2.t  version.t
